hphp/test/slow/nullsafe/nullsafe-prop-3.php.expectf
Fatal error: ?-> operator is not allowed in write context in %s/test/slow/nullsafe/nullsafe-prop-3.php on line 8